@@ -1,3 +1,8 @@
+2010-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* base.py, flickr.py, picasa.py, fspot.py: Introduced
+	  xdg.IconTheme.getIconPath.  Support for downloading favicons.
+
 2010-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoframe.py, photoimage.py, photoliststore.py: Added GConf
